--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,6 @@
     <dependencies>
 
 
-
         <!-- Hadoop Client 依赖-->
         <dependency>
             <groupId>org.apache.hadoop</groupId>
@@ -30,4 +29,22 @@
         </dependency>
     </dependencies>
 
+
+    <build>
+
+        <plugins>
+            <!-- java编译插件 -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.2</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                    <encoding>UTF-8</encoding>
+                </configuration>
+            </plugin>
+        </plugins>
+
+    </build>
 </project>
