--- a/pom.xml
+++ b/pom.xml
@@ -11,11 +11,13 @@
     <modules>
         <module>hadoop-hdfs</module>
         <module>hadoop-mapreduce</module>
+        <module>hive</module>
     </modules>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <hadoop.version>2.5.0</hadoop.version>
+        <hive.version>0.13.1</hive.version>
     </properties>
 
     <dependencies>
@@ -26,6 +28,18 @@
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-client</artifactId>
             <version>${hadoop.version}</version>
+        </dependency>
+
+        <!-- Hive Client -->
+        <dependency>
+            <groupId>org.apache.hive</groupId>
+            <artifactId>hive-jdbc</artifactId>
+            <version>${hive.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.hive</groupId>
+            <artifactId>hive-exec</artifactId>
+            <version>${hive.version}</version>
         </dependency>
     </dependencies>
 
