--- a/hadoop-hdfs/src/main/resources/input/nword.config
+++ b/hadoop-hdfs/src/main/resources/input/nword.config
@@ -2,4 +2,4 @@ idea new hello hadoop !
 idea new hadoop namenode !
 idea new hadoop datanode !
 idea new hadoop yarn !
-idea new hadoop mapreduce ！
+idea new hadoop mapreduce !
