--- a/project-dataapi/src/main/webapp/WEB-INF/web.xml
+++ b/project-dataapi/src/main/webapp/WEB-INF/web.xml
@@ -7,6 +7,7 @@
 
     <display-name>data_api</display-name>
 
+
     <context-param>
         <param-name>log4jConfigLocation</param-name>
         <param-value>classpath:log4j.properties</param-value>
@@ -56,8 +57,7 @@
     </servlet-mapping>
 
     <welcome-file-list>
-        <welcome-file>index.jsp</welcome-file>
-        <welcome-file>index.html</welcome-file>
+        <welcome-file>analyse/index.html</welcome-file>
     </welcome-file-list>
 
 </web-app>
