--- a/project-transformer/pom.xml
+++ b/project-transformer/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>project-transforer</artifactId>
+    <artifactId>project-transformer</artifactId>
 
 
 </project>
