--- a/project-dataapi/pom.xml
+++ b/project-dataapi/pom.xml
@@ -1,54 +1,39 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-
     <parent>
         <artifactId>czy-study-hadoop</artifactId>
         <groupId>com.czy.hadoop</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-
     <modelVersion>4.0.0</modelVersion>
     <artifactId>project-dataapi</artifactId>
     <packaging>war</packaging>
-    <name>project-dataapi-8080-[基于hadoop离线数据分析]</name>
-    <url>http://blog.csdn.net/javawebrookie</url>
-    <url>https://github.com/AndyCZY</url>
-    <dependencies>基于hadoop离线数据分析</dependencies>
+    <name>project-dataapi Maven Webapp</name>
+    <url>http://chenzhengyou.cn</url>
 
     <properties>
         <spring.version>4.3.10.RELEASE</spring.version>
         <mybatis.version>3.4.1</mybatis.version>
         <log4j.version>1.2.17</log4j.version>
-        <mybatis-spring.version>1.2.2</mybatis-spring.version>
-        <mysql.version>5.1.18</mysql.version>
-        <junit.version>3.8.1</junit.version>
-        <servlet-api.version>2.5</servlet-api.version>
     </properties>
+
 
 
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>${junit.version}</version>
+            <version>3.8.1</version>
             <scope>test</scope>
         </dependency>
 
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>servlet-api</artifactId>
-            <version>${servlet-api.version}</version>
+            <version>2.5</version>
             <scope>provided</scope>
         </dependency>
 
-        <!--log4j-->
-        <dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
-            <version>${log4j.version}</version>
-        </dependency>
-
-        <!--springframework-->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-core</artifactId>
@@ -103,8 +88,6 @@
             <version>${spring.version}</version>
         </dependency>
 
-
-        <!--mybatis-->
         <dependency>
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis</artifactId>
@@ -114,24 +97,26 @@
         <dependency>
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis-spring</artifactId>
-            <version>${mybatis-spring.version}</version>
+            <version>1.2.2</version>
         </dependency>
 
-        <!--mysql-->
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>${mysql.version}</version>
+            <version>5.1.18</version>
         </dependency>
 
-        <!--c3p0-->
         <dependency>
             <groupId>com.mchange</groupId>
             <artifactId>c3p0</artifactId>
             <version>0.9.5</version>
         </dependency>
 
-
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>${log4j.version}</version>
+        </dependency>
 
         <!-- spring如果需要返回json格式的数据，那么必须引入下面两个包 -->
         <dependency>
@@ -146,9 +131,7 @@
             <version>1.9.13</version>
         </dependency>
     </dependencies>
-
-
     <build>
-        <finalName>project-dataapi</finalName>
+        <finalName>project-api</finalName>
     </build>
 </project>
